@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-10T12:19:17Z",
-  "count_outdated" : 4444,
-  "uniques_outdated" : 2194,
+  "timestamp" : "2024-09-11T00:44:00Z",
+  "count_outdated" : 4445,
+  "uniques_outdated" : 2195,
   "count" : 4466,
   "uniques" : 2216,
   "clones" : [
-    {
-      "timestamp": "2024-08-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-08-29T00:00:00Z",
       "count": 4,
