@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 20,
+  "count": 21,
+  "uniques": 19,
   "clones": [
-    {
-      "timestamp": "2024-08-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-08-29T00:00:00Z",
       "count": 4,
